--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.2",
     "expo": "~46.0.13",
+    "expo-font": "~10.2.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7",
-    "expo-font": "~10.2.0",
-    "expo-splash-screen": "~0.16.2"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -39,6 +40,7 @@
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "2.7.1",
