--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
     "@expo-google-fonts/nunito": "^0.2.2",
+    "@ui-kitten/components": "^5.1.2",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
@@ -23,7 +25,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
