--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@expo-google-fonts/nunito": "^0.2.2",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
     "@ui-kitten/components": "^5.1.2",
     "expo": "~46.0.13",
     "expo-font": "~10.2.0",
@@ -25,8 +27,10 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7",
-    "react-native-svg": "12.3.0"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
