--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "~data": ["src/data"],
       "~theme": ["src/theme"],
       "~screens": ["src/screens"],
-      "~hooks": ["src/hooks"]
+      "~hooks": ["src/hooks"],
+      "~nav-types": ["src/navigation/types"]
     }
   }
 }
