add jotai for handling state

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "~screens": ["src/screens"],
       "~hooks": ["src/hooks"],
       "~components": ["src/components"],
-      "~nav-types": ["src/navigation/types"]
+      "~nav-types": ["src/navigation/types"],
+      "~store": ["src/store"]
     }
   }
 }
